--- a/deploy/INSTALL
+++ b/deploy/INSTALL
@@ -1,19 +1,17 @@
 This setup guide assumes your build environment is setup, and you are running ubuntu
 
-Ubuntu: sudo apt-get install build-essential libtool autoconf automake 
+Ubuntu: sudo apt-get install build-essential libtool autoconf automake pkg-config
 
 == Install Mongrel2==
 
 
 	Install ZMQ
-		sudo apt-get install uuid-dev
-		sudo apt-get install libsqlite3-dev	
+		sudo apt-get install uuid-dev uuid-runtime libsqlite3-dev
 
-		sudo apt-get install uuid-runtime
 		wget http://download.zeromq.org/zeromq-2.2.0.tar.gz 
 		tar -xzvf zeromq-2.2.0.tar.gz
 		cd zeromq-2.2.0/
-		./configure
+		./configure --prefix=/path/to/rumenv
 		make 
 		sudo make install
 
@@ -28,12 +26,12 @@ Ubuntu: sudo apt-get install build-essential libtool autoconf automake
 	
 
 Install WSGID
+	sudo apt-get install python-dev python-setuptools
 	wget http://wsgid.com/static/downloads/wsgid-0.7.0.tar.bz2
 	tar -jzvf wsgid-0.7.0.tar.bz2
 	cd wsgid-0.7.0
 	sudo python setup.py install
 
-	(this requires python-dev and python-setuptools)
 
 virtualENV
 Install DJANGO
